--- a/src/content/content.scss
+++ b/src/content/content.scss
@@ -1,10 +1,10 @@
 .content {
-    width: 100vw;
+    width: calc(100vw - 140px);
     height: 100vh;
     background-color: transparent;
     border: 0px none transparent;
     padding: 0px;
-    margin: 0px;
+    margin-left: 140px;
     overflow: hidden;
     display: block;
     max-width: 100%;
